@@ -6407,6 +6407,18 @@ operator|.
 name|CORE
 argument_list|,
 name|core
+argument_list|,
+name|CoreAdminParams
+operator|.
+name|DELETE_INSTANCE_DIR
+argument_list|,
+literal|"true"
+argument_list|,
+name|CoreAdminParams
+operator|.
+name|DELETE_DATA_DIR
+argument_list|,
+literal|"true"
 argument_list|)
 decl_stmt|;
 name|ShardRequest
