@@ -104,6 +104,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
 import|;
 end_import
@@ -200,9 +210,63 @@ name|client
 operator|.
 name|solrj
 operator|.
+name|impl
+operator|.
+name|HttpSolrServer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|request
+operator|.
+name|CoreAdminRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
 name|request
 operator|.
 name|QueryRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|response
+operator|.
+name|CoreAdminResponse
 import|;
 end_import
 
@@ -283,6 +347,22 @@ operator|.
 name|params
 operator|.
 name|SolrParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|NamedList
 import|;
 end_import
 
@@ -590,6 +670,83 @@ argument_list|(
 literal|"no active replicas found"
 argument_list|)
 expr_stmt|;
+name|HttpSolrServer
+name|replica1Server
+init|=
+operator|new
+name|HttpSolrServer
+argument_list|(
+name|replica1
+operator|.
+name|getStr
+argument_list|(
+literal|"base_url"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|String
+name|dataDir
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|CoreAdminResponse
+name|status
+init|=
+name|CoreAdminRequest
+operator|.
+name|getStatus
+argument_list|(
+name|replica1
+operator|.
+name|getStr
+argument_list|(
+literal|"core"
+argument_list|)
+argument_list|,
+name|replica1Server
+argument_list|)
+decl_stmt|;
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|coreStatus
+init|=
+name|status
+operator|.
+name|getCoreStatus
+argument_list|(
+name|replica1
+operator|.
+name|getStr
+argument_list|(
+literal|"core"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|dataDir
+operator|=
+operator|(
+name|String
+operator|)
+name|coreStatus
+operator|.
+name|get
+argument_list|(
+literal|"dataDir"
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|replica1Server
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
 name|removeAndWaitForReplicaGone
 argument_list|(
 name|collectionName
@@ -601,6 +758,27 @@ argument_list|,
 name|shard1
 operator|.
 name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+literal|"dataDir for "
+operator|+
+name|replica1
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|" should have been deleted by deleteReplica API"
+argument_list|,
+operator|new
+name|File
+argument_list|(
+name|dataDir
+argument_list|)
+operator|.
+name|exists
 argument_list|()
 argument_list|)
 expr_stmt|;
